<resources>
    <string name="app_name">Android Template</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="access">Access</string>
    <string name="welcome_user">Welcome @%s</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_handle">Handle</string>
    <string name="register">Register</string>
    <string name="logs">Logs</string>
    <string name="clear_log">Clear log</string>
    <string name="swipe">SWIPE</string>
</resources>
